# SPADE - Support for Provenance Auditing in Distributed Environments.
# Copyright (C) 2026 SRI International.

if PLATFORM_MAC
DIST_SUBDIRS = mac
SUBDIRS = mac
else
DIST_SUBDIRS = linux
SUBDIRS = linux
endif

maintainer-clean-local:
	rm -rf configure configure~ Makefile.in aclocal.m4 build-aux autom4te.cache conftest.*
